--- a/projects/10-Responsive-Layout/assets/css/main.css
+++ b/projects/10-Responsive-Layout/assets/css/main.css
@@ -3,6 +3,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body {
@@ -18,12 +19,62 @@ header {
     width: 100%;
     height: 250px;
 
-    background-color: #FFF;
+    padding: 0px 200px; /* two values = top/bottom left/right */
+
+    background-color: #DFDFDF;
+
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    flex: 1;
+    font-size: 52px;
+    font-weight: bold;
+}
+
+.span-logo {
+    color: #007AF3;
 }
 
 nav {
-    width: 100%;
-    height: 75px;
+    flex: 1;
+}
 
-    background-color: #007AF3;
+nav ul {
+    list-style: none;
+    justify-content: space-evenly;
+    font-size: 22px;
+}
+
+main {
+    width: 100%;
+    min-height: 800px;
+}
+
+.main-left, .main-right {
+    background-color: #637692;
+    flex: 1;
+}
+
+.main-center {
+    background-color: #5F6C7E;
+    flex: 4;
+}
+
+footer {
+    width: 100%;
+    height: 250px;
+
+    background-color: #3E4043;
+}
+
+/* Utility Classes */
+
+.addFlex {
+    display: flex;
+}
+
+.active {
+    font-weight: bold;
 }
