Been working on responsive layout - desktop - tablet - phone

--- a/projects/10-Responsive-Layout-Copy/assets/css/main.css
+++ b/projects/10-Responsive-Layout-Copy/assets/css/main.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset 'utf-8';
 
 * {
     margin: 0px;
@@ -13,54 +13,67 @@ body {
 .container {
     width: 100%;
     height: auto;
+
+    flex-direction: column;
 }
 
 header {
     width: 100%;
     height: 250px;
+    padding: 0px 200px 0px 200px;
 
-    padding: 0px 200px; /* two values = top/bottom left/right */
-
-    background-color: #DFDFDF;
-
+    background-color: #F2F2F2;
     justify-content: space-between;
     align-items: center;
 }
 
+/* @media screen and (max-width: 1000px) {
+    header {
+        flex-direction: column;
+        background-color: red;
+    }
+} */
+
 header h1 {
-    flex: 1;
-    font-size: 52px;
+    font-size: 42px;
     font-weight: bold;
+    text-transform: uppercase;
+
 }
 
-.span-logo {
+header h1 span {
     color: #007AF3;
 }
 
 nav {
-    flex: 1;
+    width: 40%;
 }
 
 nav ul {
     list-style: none;
+    font-size: 20px;
     justify-content: space-evenly;
-    font-size: 22px;
-    cursor: pointer;
+    text-transform: uppercase;
 }
 
 main {
     width: 100%;
-    min-height: 800px;
+    min-height: 700px;
 }
 
-.main-left, .main-right {
-    background-color: #637692;
+.main-left {
     flex: 1;
+    background-color: #637692;
 }
 
 .main-center {
+    flex: 3;
     background-color: #5F6C7E;
-    flex: 4;
+}
+
+.main-right {
+    flex: 1;
+    background-color: #637692;
 }
 
 footer {
@@ -69,6 +82,7 @@ footer {
 
     background-color: #3E4043;
 }
+
 
 /* Utility Classes */
 
