--- a/projects/10-Responsive-Layout/assets/css/main.css
+++ b/projects/10-Responsive-Layout/assets/css/main.css
@@ -37,6 +37,18 @@ header h1 {
     color: #007AF3;
 }
 
+.mobile-menu-icon {
+    display: none;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+input {
+    display: none;
+}
+
 nav {
     flex: 1;
 }
@@ -45,6 +57,9 @@ nav ul {
     list-style: none;
     justify-content: space-evenly;
     font-size: 22px;
+}
+
+nav li {
     cursor: pointer;
 }
 
