--- a/projects/web2/4-Ett-Steg-I-Taget/Portfolio/assets/css/main.css
+++ b/projects/web2/4-Ett-Steg-I-Taget/Portfolio/assets/css/main.css
@@ -13,7 +13,7 @@ body {
     
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 200px;
+    grid-template-rows: repeat(3, 1fr);
     
 }
 
