--- a/projects/web2/5-JavaScript-Grunder/assets/css/main.css
+++ b/projects/web2/5-JavaScript-Grunder/assets/css/main.css
@@ -34,3 +34,25 @@ body {
 #currentDay::first-letter {
     color: red;
 }
+
+#square {
+    width: 50px;
+    height: 50px;
+
+    background-color: #000;
+}
+
+#draw {
+    width: 150px;
+    height: 50px;
+    outline: none;
+    margin-top: 50px;
+    font-weight: bold;
+}
+
+#congratsText {
+    width: 300px;
+    height: 400px;
+    border: none;
+    outline: none;
+}
